tests/urmoac/errors/help_long_singledash/errors.urmoac
Error: All of the following options need a value: h, e, l, p

